-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.0
-
None
-
RHEL 8.5
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/ecec4ec7-16ee-4a58-a971-711126b77faf
test_101j failed with the following error:
== sanity test 101j: A complete read block should be submitted when no RA ========================================================== 19:56:32 (1637092592) Disable read-ahead 16+0 records in 16+0 records out 16777216 bytes (17 MB, 16 MiB) copied, 0.0582022 s, 288 MB/s Reset readahead stats 4096+0 records in 4096+0 records out 16777216 bytes (17 MB, 16 MiB) copied, 1.02446 s, 16.4 MB/s snapshot_time 3997.129812966 secs.nsecs start_time 0.000000000 secs.nsecs elapsed_time 3997.129812966 secs.nsecs failed_to_fast_read 4100 samples [pages] sanity test_101j: @@@@@@ FAIL: expected 4096 got 4100
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_101j - expected 4096 got 4100